# pinpet-server-v2

./: .gitignore  CLAUDE.md  Cargo.toml  SEARCH_RESULTS.md  config.toml  package-lock.json  package.json
.claude/commands/: constitution-zh.md  parallel.md  search.md  search_zh.md
bug/: response_卡住了.json
examples/: orderbook_manual_test.rs
idl/: pinpet.json
notes/: 代码接口规范.md
other-code/: events.rs
other-code/programs/pinpet/: Cargo.toml
other-code/programs/pinpet/src/: constants.rs  error.rs  lib.rs
other-code/programs/pinpet/src/curve/: curve_amm.rs  mod.rs
other-code/programs/pinpet/src/instructions/: admin_params.rs  buy_sell.rs  close_long_short.rs  context_validator.rs  contexts.rs  cooldown_utils.rs  create_token.rs  events.rs  long_short.rs  macros.rs  mod.rs  orderbook_manager.rs  pdas.rs  structs.rs  trade_engine.rs  utils.rs
other-code/规范代码/: api_error.rs  common_result.rs  mod.rs  user.rs  user_info_response.rs
src/: config.rs  lib.rs  main.rs
src/db/: errors.rs  event_storage.rs  kline_storage.rs  mod.rs  order_storage.rs  orderbook_storage.rs  storage.rs  token_storage.rs
src/docs/: mod.rs
src/kline/: data_processor.rs  event_handler.rs  mod.rs  socket_service.rs  subscription.rs  types.rs
src/orderbook/: closed_orders.rs  errors.rs  manager.rs  mod.rs  types.rs  user_query.rs
src/orderbook/tests/: bug_verification_test.rs  delete_test.rs  insert_test.rs  mod.rs  order_id_fix_test.rs  stress_test.rs  traverse_test.rs  update_test.rs
src/router/: db.rs  health.rs  kline.rs  mod.rs  orderbook.rs  orderbook_history.rs  token.rs  token_routes.rs
src/solana/: client.rs  events.rs  liquidation.rs  listener.rs  mint_router.rs  mod.rs  storage_handler.rs
src/util/: mod.rs  result.rs
test/: test_auto_event.js  test_auto_kline.js
tests/: order_id_fix_integration_test.rs
