[package]
name = "pinpet-server-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# API 文档
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# RocksDB
rocksdb = "0.22"

# 配置文件
config = "0.14"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Solana 相关 / Solana related
solana-sdk = "1.18"
borsh = "1.5"
base64 = "0.22"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP 客户端 / HTTP client
reqwest = { version = "0.12", features = ["json"] }

# 其他工具 / Other utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
serde_with = "3.11"
