[package]
name = "pinpet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pinpet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# 忽略特定警告
[lints.rust]
unexpected_cfgs = "allow"
unused_parens = "allow"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
rust_decimal = { version = "1.37.1", features = ["maths"] }
mpl-token-metadata = "5.1.1"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

